--- a/tinker/templates/e-announcements/results.html
+++ b/tinker/templates/e-announcements/results.html
@@ -73,7 +73,7 @@
                     </nav>
                 {% endif %}
                 {% for form in search_results %}
-                    <div class="list-group">
+                    <div class="items-to-paginate">
                         {{ form_card(form) }}
                     </div>
                 {% endfor %}
