--- a/tinker/templates/creative_tim_base.html
+++ b/tinker/templates/creative_tim_base.html
@@ -71,6 +71,9 @@
     <!-- General Tinker JS file -->
    <script src="/static/assets/js/tinker.js" type="text/javascript"></script>
 
+    <!-- JS Cookie Script -->
+    <script src="/static/js.cookie.js"></script>
+
     {% block scripts %}{% endblock %}
 
     <div class="collapse navbar-collapse off-canvas-sidebar" data-background-color="white" data-active-color="danger">
