--- a/tinker/templates/e-announcements/home.html
+++ b/tinker/templates/e-announcements/home.html
@@ -155,7 +155,7 @@
                     // window.location.replace(result);
                     document.getElementById('results').innerHTML = result;
                     $('#spinner').hide();
-                    window.onload(pagination());
+                    window.onLoad(pagination("e-announcement"));
                 }
             });
         }
