--- a/tinker/templates/events/home.html
+++ b/tinker/templates/events/home.html
@@ -201,7 +201,7 @@
                     // window.location.replace(result);
                     document.getElementById('results').innerHTML = result;
                     $('#spinner').hide();
-                    window.onLoad(pagination());
+                    window.onLoad(pagination("event"));
                 }
             });
         }
