changed comm and marketing to marketing and comm

--- a/tinker/templates/e-announcements/confirm.html
+++ b/tinker/templates/e-announcements/confirm.html
@@ -15,7 +15,7 @@
                         will appear on your Tinker <a href="{{ url_for('EAnnouncementsView:index') }}">E-Announcement
                         page</a> where you'll be able to view the announcement page or make changes to it.
                     </p>
-                    <p>If you have any questions, please contact the Office of Communications and Marketing at <a
+                    <p>If you have any questions, please contact the Office of Marketing and Communications at <a
                             href="mailto:e-announcements@bethel.edu">e-announcements@bethel.edu</a>.</p>
                 {% else %}
                     <p>
@@ -23,7 +23,7 @@
                         will appear on your Tinker <a href="{{ url_for('EAnnouncementsView:index') }}">E-Announcement
                         page</a> where you'll be able to view the announcement page or make changes to it.
                     </p>
-                    <p>If you have any questions, please contact the Office of Communications and Marketing at <a
+                    <p>If you have any questions, please contact the Office of Marketing and Communications at <a
                             href="mailto:e-announcements@bethel.edu">e-announcements@bethel.edu</a>.</p>
                 {% endif %}
             </div>
