removed unused code/outdated comments

--- a/tinker/templates/events/search-results.html
+++ b/tinker/templates/events/search-results.html
@@ -40,7 +40,7 @@
             <div id="loop" class="form-group col-md-12">
                 {% if list_of_events|length > 10 %}
                     <nav aria-label="Page navigation example">
-                        <ul class="pagination"> {# change class name to something more clear #}
+                        <ul class="pagination">
                             <li id="previous-page">
                                 <a href="javascript:void(0)">
                                     <span aria-hidden="true">&laquo;</span>
