added pagination but still have one bug to fix
Point and click works and the "go to page" works but not the next/prev button. This may be fixed by changing it so it works by setting the actually page versus just incrementing or decrementing by one like it is doing now

--- a/tinker/templates/e-announcements/results.html
+++ b/tinker/templates/e-announcements/results.html
@@ -59,10 +59,17 @@
                         </ul>
                         <ul>
                             <li style="list-style-type: none;">
+                                Go To Page
+                            </li>
+                            <li style="list-style-type: none;">
+                                <input value="" type="text" id="go-to-input" style="width: 45%;">
+                                <button style="width: 5%" id='go-to-button'>Go</button>
+                            </li>
+                            <li style="list-style-type: none;">
                                 Limit
                             </li>
                             <li style="list-style-type: none;">
-                                <select id="selected-option">
+                                <select style="width: 50%;" id="selected-option">
                                 </select>
                             </li>
                         </ul>
