--- a/tinker/templates/events/search-results.html
+++ b/tinker/templates/events/search-results.html
@@ -49,6 +49,13 @@
                         </ul>
                         <ul>
                             <li style="list-style-type: none;">
+                                Go To Page
+                            </li>
+                            <li style="list-style-type: none;">
+                                <input value="" type="text" id="go-to-input" style="width: 45%;">
+                                <button style="width: 5%" id='go-to-button'>Go</button>
+                            </li>
+                            <li style="list-style-type: none;">
                                 Limit
                             </li>
                             <li style="list-style-type: none;">
