fixed name of variable issue

--- a/tinker/templates/e-announcements/results.html
+++ b/tinker/templates/e-announcements/results.html
@@ -58,7 +58,7 @@
                             </li>
                         </ul>
                         <ul>
-                            {% if list_of_events | length > 15 %}
+                            {% if search_results | length > 15 %}
                             <li style="list-style-type: none;">
                                 Go To Page
                             </li>
