--- a/tinker/templates/events/search-results.html
+++ b/tinker/templates/events/search-results.html
@@ -38,40 +38,31 @@
         <h2>{{ formsHeader }}</h2>
         {% if list_of_events is defined and list_of_events | length > 0 %}
             <div id="loop" class="form-group col-md-12">
+                {% for form in list_of_events %}
+                    <div class="items-to-paginate">
+                        {{ form_card(form) }}
+                    </div>
+                {% endfor %}
                 {% if list_of_events|length > 10 %}
                     <nav aria-label="Page navigation example">
-                        <ul class="pagination">
+                        <ul class="pagination left">
                             <li id="previous-page">
                                 <a href="javascript:void(0)">
                                     <span aria-hidden="true">&laquo;</span>
                                 </a>
                             </li>
                         </ul>
-                        <ul>
-                            {% if list_of_events | length > 150 %}
-                            <li style="list-style-type: none;">
-                                Go To Page
+                        <ul class="left limit-ul">
+                            <li style="margin-right: 10px;" class="limit-selector">
+                                <p style="margin: 0px; line-height: 35px;">Limit</p>
                             </li>
-                            <li style="list-style-type: none;">
-                                <input value="" type="text" id="go-to-input" style="width: 45%;">
-                                <button style="width: 5%" id='go-to-button'>Go</button>
-                            </li>
-                            {% endif %}
-                            <li style="list-style-type: none;">
-                                Limit
-                            </li>
-                            <li style="list-style-type: none;">
-                                <select id="selected-option">
+                            <li class="limit-selector">
+                                <select style="width: 100%; height: 100%" id="selected-option">
                                 </select>
                             </li>
                         </ul>
                     </nav>
                 {% endif %}
-                {% for form in list_of_events %}
-                    <div class="items-to-paginate">
-                        {{ form_card(form) }}
-                    </div>
-                {% endfor %}
             </div>
         {% else %}
             <p> Search completed: No Events meet the search criteria. </p>
