--- a/tinker/templates/e-announcements/home.html
+++ b/tinker/templates/e-announcements/home.html
@@ -33,9 +33,9 @@
             <select class="horizontal-scroll" size="{{ all_schools|length }}" id="school-selector" multiple>
                 {% for school_code, school in all_schools.items() %}
                     {% if loop.first %}
-                        <option value="{{ school_code }}" selected="selected">{{ school }}</option>
+                        <option id="{{ school_code }}" value="{{ school_code }}" selected="selected">{{ school }}</option>
                     {% elif not loop.last %}
-                        <option value="{{ school_code }}">{{ school }}</option>
+                        <option id="{{ school_code }}" value="{{ school_code }}">{{ school }}</option>
                     {% endif %}
                 {% endfor %}
             </select>
