added necessary configs and updated profile to include iam groups

--- a/tinker/templates/profile.html
+++ b/tinker/templates/profile.html
@@ -52,6 +52,15 @@
                             {% endfor %}
                         </td>
                     </tr>
+                    <tr>
+                        <th>Iam Groups</th>
+                        <td>
+                            {% for key in session['iam_groups'] %}
+                                {{ key }}
+                                <br/>
+                            {% endfor %}
+                        </td>
+                    </tr>
                 </table>
             </div>
         </div>
