fixed bootstrap btn styling

--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -165,6 +165,11 @@ a#remove_new_job_button {
     border-color: #489030 !important;
 }
 
+.activate {
+    background-color: #489030 !important;
+    border-color: #489030 !important;
+}
+
 .deactivate {
     background-color: #DE8626 !important;
     border-color: #DE8626 !important;
@@ -466,7 +471,7 @@ hr {
 
 .btn, .navbar .navbar-nav > li > a.btn {
     color: #fff !important;
-    background-color: #0069AA !important;
+    background-color: #0069AA;
     border-width: 0 !important;
     padding: 7px 18px 7px 14px;
 }
@@ -723,7 +728,7 @@ label.checkbox {
 }
 
 .admin-user-bar > p > a:hover {
-  color: #337ab7; 
+  color: #337ab7;
 }
 
 .date-range{
