--- a/tinker/templates/faculty-bios/home.html
+++ b/tinker/templates/faculty-bios/home.html
@@ -77,7 +77,7 @@
                             </a>
                     {% else %}
                             <a id="{{ bio.id }}" data-method="Yes" data-faculty-bio-id="{{ bio.id }}"
-                               class="small btn btn-primary btn-alert courseleaf-user-click">Add to Catalog
+                               class="small btn btn-primary btn-alert activate courseleaf-user-click">Add to Catalog
                             </a>
                     {% endif %}
                     </li>
@@ -318,5 +318,3 @@
     </script>
 
 {% endblock %}
-
-
