switched to btn-danger

--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -180,7 +180,7 @@ a#remove_new_job_button {
     border-color: #f04124 !important;
 }
 
-.danger {
+.btn-danger {
     background-color: #f04124 !important;
     border-color: #f04124 !important;
 }
