--- a/tinker/templates/admin/publish/program-feeds-table.html
+++ b/tinker/templates/admin/publish/program-feeds-table.html
@@ -17,7 +17,7 @@
             <h3 class="subtitle">Publish Program Feeds</h3>
             <br/>
             <a href='{{ url_for('PublishView:publish_program_feeds_return', destination = "staging") }}' class="btn btn-alert">Publish to Staging</a>
-            <a href='{{ url_for('PublishView:publish_program_feeds_return', destination = "production") }}' class="btn danger">Publish to Production and Staging</a>
+            <a href='{{ url_for('PublishView:publish_program_feeds_return', destination = "production") }}' class="btn btn-danger">Publish to Production and Staging</a>
         </div>
     </div>
 
