event btn styling

--- a/tinker/templates/events/home.html
+++ b/tinker/templates/events/home.html
@@ -128,7 +128,7 @@
                 </div>
                 <div class="modal-footer">
                     <a id="modal-confirm" href="/events/delete/formid"
-                       class="btn btn-primary btn-alert modal-confirm">Delete</a>
+                       class="btn btn-danger modal-confirm">Delete</a>
                 </div>
             </div>
         </div>
