fac bios btn styling

--- a/tinker/templates/faculty-bios/form.html
+++ b/tinker/templates/faculty-bios/form.html
@@ -731,7 +731,7 @@ to be in it's own card div, something to think about in the future -->
     </fieldset>
     <a href="javascript:void(0);" id="add_degree_button" class="btn btn-primary">Add Another Degree</a>
     <a href="javascript:void(0);" id="remove_degree_button" style="display:none"
-       class="btn btn-primary btn-alert">Remove
+       class="btn btn-primary btn-danger">Remove
         Degree</a>
 
 {%- endmacro %}
