--- a/tinker/templates/admin/redirects/home.html
+++ b/tinker/templates/admin/redirects/home.html
@@ -260,7 +260,7 @@
                     });
                 });
 
-                $(".btn-alert").click(function () {
+                $(".btn-danger").click(function () {
                     var redirect_data = {"redirect_id": $(this).attr('data-delete-id')};
                     var url = "{{ url_for('RedirectsView:delete_redirect') }}";
                     $.post(url, redirect_data, function (data) {
