--- a/tinker/templates/events/form.html
+++ b/tinker/templates/events/form.html
@@ -573,6 +573,8 @@
 
                 <select id="timezone1" style="display: none" name="timezone1" class="timezoneselect">
                     <option value>-select-</option>
+                    <option value="Hawaii-Aleutian Time">Hawaii-Aleutian Time</option>
+                    <option value="Alaska Time">Alaska Time</option>
                     <option value="Pacific Time">Pacific Time</option>
                     <option value="Mountain Time">Mountain Time</option>
                     <option value="Central Time">Central Time</option>
